FIR/IIR corrected & finalized, staticHelperCausal corrected, tests added